[project]
name = "certificate-generator"
version = "0.1.0"
description = "Generates certificates based on the pyopenssl possibilities"
authors = [{ name = "Srikanth Gopalakrishnan", email = "srikanth.gokr@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyOpenSSL>=25.3.0",
    "pyshark>=0.6",
    "rich>=14.2.0",
    "typer>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.uv]
managed = true

[tool.hatch.build.targets.wheel]
packages = ["cert_gen"]
