[project]
name = "certificate-generator"
version = "0.1.0"
description = "Generates certificates based on the pyopenssl possibilities"
authors = [{ name = "Srikanth Gopalakrishnan", email = "srikanth.gokr@gmail.com" }]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "fasthtml-admin>=0.1.2",
    "fasthtml-sqlalchemy>=0.1.0",
    "lucide-fasthtml>=0.0.9",
    "pyOpenSSL>=25.3.0",
    "pyshark>=0.6",
    "python-fasthtml>=0.12.36",
    "rich>=14.2.0",
    "sqlmodel>=0.0.31",
    "typer>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-async>=0.1.1",
    "pytest-codspeed>=4.2.0",
    "pytest-cov>=7.0.0",
    "pytest-memray>=1.8.0",
    "ruff>=0.14.10",
]

[tool.uv]
managed = true

[tool.hatch.build.targets.wheel]
packages = ["cert_gen"]
